--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "engines": {
     "vscode": "^1.87.0"
   },
+  "publisher": "alikarimii",
+  "icon": "icon.png",
   "repository": {
   "type": "git",
   "url": "https://github.com/alikarimii/yuri.git"
 },
   "categories": [
-    "Other"
+    "Programming Languages"
   ],
   "activationEvents": [
     "onLanguage:typescript"
