fix(refactoreCORS): add config

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yuri-typescript-toolbox",
   "displayName": "Yuri",
   "description": "typescript toolbox with config options",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "engines": {
     "vscode": "^1.87.0"
   },
@@ -72,6 +72,16 @@
           "type": "string",
           "default": "(ViewModel|View|Props)$",
           "description": "stripe Suffix Regex."
+        },
+        "yuri.yuri.refactorCQRSHandlerToUseCase.resultOk": {
+          "type": "string",
+          "default": "resultOk",
+          "description": "return type of UseCase in ok"
+        },
+        "yuri.yuri.refactorCQRSHandlerToUseCase.resultFailure": {
+          "type": "string",
+          "default": "resultFailure",
+          "description": "return type of UseCase in failure"
         }
       }
     },
